// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=always, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "literal",
    "value": " ",
  },
  {
    "type": "compact",
    "value": "тисяч",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=always, compactDisplay=long 2`] = `"+10 тисяч–+20 тисяч"`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=always, compactDisplay=long 3`] = `"+10 тисяч–+20 тисяч"`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=always, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "literal",
    "value": " ",
  },
  {
    "type": "compact",
    "value": "тис.",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=always, compactDisplay=short 2`] = `"+10 тис.–+20 тис."`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=always, compactDisplay=short 3`] = `"+10 тис.–+20 тис."`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=auto, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "literal",
    "value": " ",
  },
  {
    "type": "compact",
    "value": "тисяч",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=auto, compactDisplay=long 2`] = `"10 тисяч–20 тисяч"`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=auto, compactDisplay=long 3`] = `"10 тисяч–20 тисяч"`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=auto, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "literal",
    "value": " ",
  },
  {
    "type": "compact",
    "value": "тис.",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=auto, compactDisplay=short 2`] = `"10 тис.–20 тис."`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=auto, compactDisplay=short 3`] = `"10 тис.–20 тис."`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=exceptZero, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "literal",
    "value": " ",
  },
  {
    "type": "compact",
    "value": "тисяч",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=exceptZero, compactDisplay=long 2`] = `"+10 тисяч–+20 тисяч"`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=exceptZero, compactDisplay=long 3`] = `"+10 тисяч–+20 тисяч"`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=exceptZero, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "literal",
    "value": " ",
  },
  {
    "type": "compact",
    "value": "тис.",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=exceptZero, compactDisplay=short 2`] = `"+10 тис.–+20 тис."`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=exceptZero, compactDisplay=short 3`] = `"+10 тис.–+20 тис."`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=never, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "literal",
    "value": " ",
  },
  {
    "type": "compact",
    "value": "тисяч",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=never, compactDisplay=long 2`] = `"10 тисяч–20 тисяч"`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=never, compactDisplay=long 3`] = `"10 тисяч–20 тисяч"`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=never, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "literal",
    "value": " ",
  },
  {
    "type": "compact",
    "value": "тис.",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=never, compactDisplay=short 2`] = `"10 тис.–20 тис."`;

exports[`Intl.NumberFormat uk > notation=compact, signDisplay=never, compactDisplay=short 3`] = `"10 тис.–20 тис."`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=always, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "Е",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=always, compactDisplay=long 2`] = `"+10Е3–+20Е3"`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=always, compactDisplay=long 3`] = `"+10Е3–+20Е3"`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=always, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "Е",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=always, compactDisplay=short 2`] = `"+10Е3–+20Е3"`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=always, compactDisplay=short 3`] = `"+10Е3–+20Е3"`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=auto, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "Е",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=auto, compactDisplay=long 2`] = `"10Е3–20Е3"`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=auto, compactDisplay=long 3`] = `"10Е3–20Е3"`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=auto, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "Е",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=auto, compactDisplay=short 2`] = `"10Е3–20Е3"`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=auto, compactDisplay=short 3`] = `"10Е3–20Е3"`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=exceptZero, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "Е",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=exceptZero, compactDisplay=long 2`] = `"+10Е3–+20Е3"`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=exceptZero, compactDisplay=long 3`] = `"+10Е3–+20Е3"`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=exceptZero, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "Е",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=exceptZero, compactDisplay=short 2`] = `"+10Е3–+20Е3"`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=exceptZero, compactDisplay=short 3`] = `"+10Е3–+20Е3"`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=never, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "Е",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=never, compactDisplay=long 2`] = `"10Е3–20Е3"`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=never, compactDisplay=long 3`] = `"10Е3–20Е3"`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=never, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "Е",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=never, compactDisplay=short 2`] = `"10Е3–20Е3"`;

exports[`Intl.NumberFormat uk > notation=engineering, signDisplay=never, compactDisplay=short 3`] = `"10Е3–20Е3"`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=always, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "Е",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=always, compactDisplay=long 2`] = `"+1Е4–+2Е4"`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=always, compactDisplay=long 3`] = `"+1Е4–+2Е4"`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=always, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "Е",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=always, compactDisplay=short 2`] = `"+1Е4–+2Е4"`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=always, compactDisplay=short 3`] = `"+1Е4–+2Е4"`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=auto, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "Е",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=auto, compactDisplay=long 2`] = `"1Е4–2Е4"`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=auto, compactDisplay=long 3`] = `"1Е4–2Е4"`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=auto, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "Е",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=auto, compactDisplay=short 2`] = `"1Е4–2Е4"`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=auto, compactDisplay=short 3`] = `"1Е4–2Е4"`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=exceptZero, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "Е",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=exceptZero, compactDisplay=long 2`] = `"+1Е4–+2Е4"`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=exceptZero, compactDisplay=long 3`] = `"+1Е4–+2Е4"`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=exceptZero, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "Е",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=exceptZero, compactDisplay=short 2`] = `"+1Е4–+2Е4"`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=exceptZero, compactDisplay=short 3`] = `"+1Е4–+2Е4"`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=never, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "Е",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=never, compactDisplay=long 2`] = `"1Е4–2Е4"`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=never, compactDisplay=long 3`] = `"1Е4–2Е4"`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=never, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "Е",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=never, compactDisplay=short 2`] = `"1Е4–2Е4"`;

exports[`Intl.NumberFormat uk > notation=scientific, signDisplay=never, compactDisplay=short 3`] = `"1Е4–2Е4"`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=always, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": " ",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=always, compactDisplay=long 2`] = `"+10 000–+20 000"`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=always, compactDisplay=long 3`] = `"+10 000–+20 000"`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=always, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": " ",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=always, compactDisplay=short 2`] = `"+10 000–+20 000"`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=always, compactDisplay=short 3`] = `"+10 000–+20 000"`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=auto, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": " ",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=auto, compactDisplay=long 2`] = `"10 000–20 000"`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=auto, compactDisplay=long 3`] = `"10 000–20 000"`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=auto, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": " ",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=auto, compactDisplay=short 2`] = `"10 000–20 000"`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=auto, compactDisplay=short 3`] = `"10 000–20 000"`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=exceptZero, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": " ",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=exceptZero, compactDisplay=long 2`] = `"+10 000–+20 000"`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=exceptZero, compactDisplay=long 3`] = `"+10 000–+20 000"`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=exceptZero, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": " ",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=exceptZero, compactDisplay=short 2`] = `"+10 000–+20 000"`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=exceptZero, compactDisplay=short 3`] = `"+10 000–+20 000"`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=never, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": " ",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=never, compactDisplay=long 2`] = `"10 000–20 000"`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=never, compactDisplay=long 3`] = `"10 000–20 000"`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=never, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": " ",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=never, compactDisplay=short 2`] = `"10 000–20 000"`;

exports[`Intl.NumberFormat uk > notation=standard, signDisplay=never, compactDisplay=short 3`] = `"10 000–20 000"`;
